@@ -6,65 +6,83 @@
  */
 package com.anji.captcha.util;
 
+import com.alibaba.fastjson.JSONObject;
 import com.anji.captcha.model.common.CaptchaBaseMapEnum;
-import org.springframework.core.io.Resource;
-import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
-import org.springframework.core.io.support.ResourcePatternResolver;
-import org.springframework.util.Base64Utils;
-import org.springframework.util.FileCopyUtils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.*;
+import java.net.URL;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 
 public class ImageUtils {
+    private static Logger logger = LoggerFactory.getLogger(ImageUtils.class);
     private static Map<String, String> originalCacheMap = new ConcurrentHashMap();  //滑块底图
     private static Map<String, String> slidingBlockCacheMap = new ConcurrentHashMap(); //滑块
     private static Map<String, String> picClickCacheMap = new ConcurrentHashMap(); //点选文字
     private static Map<String, String[]> fileNameMap = new ConcurrentHashMap<>();
 
-
     public static void cacheImage(String captchaOriginalPathJigsaw, String captchaOriginalPathClick) {
         //滑动拼图
         if (StringUtils.isBlank(captchaOriginalPathJigsaw)) {
-            originalCacheMap.putAll(getResourcesImagesFile("classpath:images/jigsaw/original/*.png"));
-            slidingBlockCacheMap.putAll(getResourcesImagesFile("classpath:images/jigsaw/slidingBlock/*.png"));
+            originalCacheMap.putAll(getResourcesImagesFile("defaultImages/jigsaw/original"));
+            slidingBlockCacheMap.putAll(getResourcesImagesFile("defaultImages/jigsaw/slidingBlock"));
         } else {
             originalCacheMap.putAll(getImagesFile(captchaOriginalPathJigsaw + File.separator + "original"));
             slidingBlockCacheMap.putAll(getImagesFile(captchaOriginalPathJigsaw + File.separator + "slidingBlock"));
         }
         //点选文字
         if (StringUtils.isBlank(captchaOriginalPathClick)) {
-            picClickCacheMap.putAll(getResourcesImagesFile("classpath:images/pic-click/*.png"));
+            picClickCacheMap.putAll(getResourcesImagesFile("defaultImages/pic-click"));
         } else {
             picClickCacheMap.putAll(getImagesFile(captchaOriginalPathClick));
         }
         fileNameMap.put(CaptchaBaseMapEnum.ORIGINAL.getCodeValue(), originalCacheMap.keySet().toArray(new String[0]));
         fileNameMap.put(CaptchaBaseMapEnum.SLIDING_BLOCK.getCodeValue(), slidingBlockCacheMap.keySet().toArray(new String[0]));
         fileNameMap.put(CaptchaBaseMapEnum.PIC_CLICK.getCodeValue(), picClickCacheMap.keySet().toArray(new String[0]));
+        logger.info("初始化底图:{}", JSONObject.toJSONString(fileNameMap));
     }
+
+    public static void cacheBootImage(Map<String, String> originalMap, Map<String, String> slidingBlockMap, Map<String, String> picClickMap) {
+        originalCacheMap.putAll(originalMap);
+        slidingBlockCacheMap.putAll(slidingBlockMap);
+        picClickCacheMap.putAll(picClickMap);
+        fileNameMap.put(CaptchaBaseMapEnum.ORIGINAL.getCodeValue(), originalCacheMap.keySet().toArray(new String[0]));
+        fileNameMap.put(CaptchaBaseMapEnum.SLIDING_BLOCK.getCodeValue(), slidingBlockCacheMap.keySet().toArray(new String[0]));
+        fileNameMap.put(CaptchaBaseMapEnum.PIC_CLICK.getCodeValue(), picClickCacheMap.keySet().toArray(new String[0]));
+        logger.info("自定义resource底图:{}", JSONObject.toJSONString(fileNameMap));
+    }
+
 
     public static BufferedImage getOriginal() {
         String[] strings = fileNameMap.get(CaptchaBaseMapEnum.ORIGINAL.getCodeValue());
+        if (null == strings || strings.length == 0) {
+            return null;
+        }
         Integer randomInt = RandomUtils.getRandomInt(0, strings.length);
         String s = originalCacheMap.get(strings[randomInt]);
         return getBase64StrToImage(s);
     }
 
-    public static BufferedImage getslidingBlock() {
+    public static String getslidingBlock() {
         String[] strings = fileNameMap.get(CaptchaBaseMapEnum.SLIDING_BLOCK.getCodeValue());
+        if (null == strings || strings.length == 0) {
+            return null;
+        }
         Integer randomInt = RandomUtils.getRandomInt(0, strings.length);
         String s = slidingBlockCacheMap.get(strings[randomInt]);
-        return getBase64StrToImage(s);
+        return s;
     }
 
     public static BufferedImage getPicClick() {
         String[] strings = fileNameMap.get(CaptchaBaseMapEnum.PIC_CLICK.getCodeValue());
+        if (null == strings || strings.length == 0) {
+            return null;
+        }
         Integer randomInt = RandomUtils.getRandomInt(0, strings.length);
         String s = picClickCacheMap.get(strings[randomInt]);
         return getBase64StrToImage(s);
@@ -84,8 +102,10 @@ public class ImageUtils {
             e.printStackTrace();
         }
         byte[] bytes = baos.toByteArray();
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encodeBuffer(bytes).trim();
+
+        Base64.Encoder encoder = Base64.getEncoder();
+
+        return encoder.encodeToString(bytes).trim();
     }
 
     /**
@@ -96,8 +116,8 @@ public class ImageUtils {
      */
     public static BufferedImage getBase64StrToImage(String base64String) {
         try {
-            BASE64Decoder base64Decoder = new BASE64Decoder();
-            byte[] bytes = base64Decoder.decodeBuffer(base64String);
+            Base64.Decoder decoder = Base64.getDecoder();
+            byte[] bytes = decoder.decode(base64String);
             ByteArrayInputStream inputStream = new ByteArrayInputStream(bytes);
             return ImageIO.read(inputStream);
         } catch (IOException e) {
@@ -107,26 +127,31 @@ public class ImageUtils {
     }
 
 
-    public static Map<String, String> getResourcesImagesFile(String path) {
+    private static Map<String, String> getResourcesImagesFile(String path) {
+        //默认提供六张底图
         Map<String, String> imgMap = new HashMap<>();
-        ResourcePatternResolver resolver = new PathMatchingResourcePatternResolver();
-        try {
-            Resource[] resources = resolver.getResources(path);
-            for (Resource resource : resources) {
-                byte[] bytes = FileCopyUtils.copyToByteArray(resource.getInputStream());
-                String string = Base64Utils.encodeToString(bytes);
-                String filename = resource.getFilename();
-                imgMap.put(filename, string);
+        ClassLoader classLoader = ImageUtils.class.getClassLoader();
+        for (int i = 1; i <= 6; i++) {
+            InputStream resourceAsStream = classLoader.getResourceAsStream(path.concat("/").concat(String.valueOf(i).concat(".png")));
+            byte[] bytes = new byte[0];
+            try {
+                bytes = FileCopyUtils.copyToByteArray(resourceAsStream);
+            } catch (IOException e) {
+                e.printStackTrace();
             }
-        } catch (Exception e) {
-            e.printStackTrace();
+            String string = Base64Utils.encodeToString(bytes);
+            String filename = String.valueOf(i).concat(".png");
+            imgMap.put(filename, string);
         }
         return imgMap;
     }
 
-    public static Map<String, String> getImagesFile(String path) {
+    private static Map<String, String> getImagesFile(String path) {
         Map<String, String> imgMap = new HashMap<>();
         File file = new File(path);
+        if (!file.exists()) {
+            return new HashMap<>();
+        }
         File[] files = file.listFiles();
         Arrays.stream(files).forEach(item -> {
             try {
